--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Slicebox - 3D Image Slider with Fallback" />
-    <meta name="keywords"
-        content="jquery, css3, 3d, webkit, fallback, slider, css3, 3d transforms, slices, rotate, box, automatic" />
-    <meta name="author" content="Pedro Botelho for Codrops" />
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="libiray/css/demo.css" />
-    <link rel="stylesheet" type="text/css" href="libiray/css/slicebox.css" />
-    <link rel="stylesheet" type="text/css" href="libiray/css/custom.css" />
-    <script type="text/javascript" src="libiray/js/modernizr.custom.46884.js"></script>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="style.css">
     <title>Decoroom steel</title>
@@ -125,6 +116,14 @@
                 <p>Выполненных заказов</p>
             </div>
         </div>
+        <div class="oNasSlide">
+            <div class="oNasSlidebox1">
+                <iframe src="libiray/slick-1.8.1/index.html" frameborder="0"></iframe>
+            </div>
+            <div class="oNasSlidebox2">
+                <h1> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas minima rem dolorem, velit quidem itaque fuga minus dignissimos debitis aperiam quis reiciendis ipsam, repudiandae deleniti odit vitae. Numquam, iste. Ullam. </h1>
+            </div>
+        </div>
         
         <!-- -------------------------------------------- Content ------------------------------------------------ -->
         <section class="nash">
@@ -132,96 +131,7 @@
             <h1>Только высокое качество</h1>
             <div class="nashContBox">
                 <div class="nashBox">
-                    <div class="wrapper">
-
-                        <ul id="sb-slider" class="sb-slider">
-                            <li>
-                                <a href=""><img
-                                        src="slide0.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a href=""><img
-                                        src="slide1.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a href=""><img
-                                        src="slide2.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a href=""><img
-                                        src="slide3.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a href=""><img
-                                        src="slide4.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a href=""><img
-                                        src="slide5.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a href=""><img
-                                        src="slide6.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a href=""><img
-                                        src="slide7.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a href=""><img
-                                        src="slide8.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a href=""><img
-                                        src="slide9.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a href=""><img
-                                        src="slide10.jpeg" alt="Error" /></a>
-                                <div class="sb-description">
-                                    <h3>Decoroom Steel</h3>
-                                </div>
-                            </li>
-                        </ul>
-
-                        <div id="shadow" class="shadow"></div>
-
-                        <div id="nav-arrows" class="nav-arrows">
-                            <a href="#">Next</a>
-                            <a href="#">Previous</a>
-                        </div>
-
-                    </div>
+                    <iframe src="libiray/Slicebox/slide3d.html" frameborder="0"></iframe>
                 </div>
                 <div class="nashBox">
                     <div class="nashImg">
@@ -278,7 +188,7 @@
             <div class="images"></div>
             <div class="productsCont">
                 <div class="productsBox">
-                    <div class="productsImg" style="background-image: url(carty1.png);"></div>
+                    <div class="productsImg" style="background-image: url(img/carty1.png);"></div>
                     <div class="productsText">
                         <h4>Name products</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id quasi repudiandae vero nisi
@@ -286,7 +196,7 @@
                     </div>
                 </div>
                 <div class="productsBox">
-                    <div class="productsImg" style="background-image: url(carty2.png);"></div>
+                    <div class="productsImg" style="background-image: url(img/carty2.png);"></div>
                     <div class="productsText">
                         <h4>Name products</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id quasi repudiandae vero nisi
@@ -294,7 +204,7 @@
                     </div>
                 </div>
                 <div class="productsBox">
-                    <div class="productsImg" style="background-image: url(carty3.png);"></div>
+                    <div class="productsImg" style="background-image: url(img/carty3.png);"></div>
                     <div class="productsText">
                         <h4>Name products</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id quasi repudiandae vero nisi
@@ -307,7 +217,7 @@
 <!-- -------------------------------------------- O nas ------------------------------------------------ -->
     <div class="fon1">
         <section class="part">
-            <h3>Нам доверяют</h3>
+            <h3>Наши партнёры</h3>
             <div class="marquee">
                 <div class="marquee__content">
                     <ul class="list-inline">
@@ -409,32 +319,6 @@
             updateCount();
         });
     </script>
-     <!-- <script type="text/javascript">
-        $(document).on('ready', function () {
-            $(".center").slick({
-                dots: false,
-                infinite: true,
-                centerMode: true,
-                slidesToShow: 5,
-                slidesToScroll: 15,
-                autoplay : true,
-                autoplaySpeed: 500,
-                arrows: false,
-                pauseOnHover: false,
-                responsive : [{
-                    breakpoint: 768,
-                    settings:{
-                        slidesToShow: 4
-                    }
-                },{
-                    breakpoint:520,
-                    settings:{
-                        slidesToShow:3
-                    }
-                }]
-            });
-        });
-    </script> -->
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"></script>
     <script type="text/javascript">
         ymaps.ready(init);
@@ -458,59 +342,6 @@
             placemark.balloon.open();
 
         }
-    </script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="libiray/js/jquery.slicebox.js"></script>
-    <script type="text/javascript">
-        $(function () {
-
-            var Page = (function () {
-
-                var $navArrows = $('#nav-arrows').hide(),
-                    $shadow = $('#shadow').hide(),
-                    slicebox = $('#sb-slider').slicebox({
-                        onReady: function () {
-
-                            $navArrows.show();
-                            $shadow.show();
-
-                        },
-                        orientation: 'r',
-                        cuboidsRandom: true,
-                        disperseFactor: 30
-                    }),
-
-                    init = function () {
-
-                        initEvents();
-
-                    },
-                    initEvents = function () {
-
-                        // add navigation events
-                        $navArrows.children(':first').on('click', function () {
-
-                            slicebox.next();
-                            return false;
-
-                        });
-
-                        $navArrows.children(':last').on('click', function () {
-
-                            slicebox.previous();
-                            return false;
-
-                        });
-
-                    };
-
-                return { init: init };
-
-            })();
-
-            Page.init();
-
-        });
     </script>
     <script src="script.js"></script>
     
