--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                 </div>
-                <h3 class="counter" data-count="5850">0</h3>
+                <h3 class="counter" data-count="589">0</h3>
                 <p>Клиентов в год</p>
             </div>
             <div class="social">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <h3 class="counter" data-count="8">0</h3>
-                <p>Лет  средний опыт работы специалистов</p>
+                <p>Лет средний опыт работы специалистов</p>
             </div>
             <div class="social">
                 <div class="social-icon">
@@ -121,10 +121,11 @@
                 <iframe src="libiray/slick-1.8.1/index.html" frameborder="0"></iframe>
             </div>
             <div class="oNasSlidebox2">
-                <h1> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas minima rem dolorem, velit quidem itaque fuga minus dignissimos debitis aperiam quis reiciendis ipsam, repudiandae deleniti odit vitae. Numquam, iste. Ullam. </h1>
+                <h1> Мы создаем изделия, которые выдержат испытание временем и станут важной частью вашего пространства.
+                    В DECOOROM STEEL мы верим, что дизайн должен быть не только красивым, но и практичным. </h1>
             </div>
         </div>
-        
+
         <!-- -------------------------------------------- Content ------------------------------------------------ -->
         <section class="nash">
             <p>Наши преимущества</p>
@@ -182,7 +183,7 @@
                 </div>
             </div>
         </section>
-<!-- -------------------------------------------- Produkti ------------------------------------------------ -->
+        <!-- -------------------------------------------- Produkti ------------------------------------------------ -->
         <section class="products">
             <h3>Наши продукты</h3>
             <div class="images"></div>
@@ -190,31 +191,40 @@
                 <div class="productsBox">
                     <div class="productsImg" style="background-image: url(img/carty1.png);"></div>
                     <div class="productsText">
-                        <h4>Name products</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id quasi repudiandae vero nisi
-                            explicabo accusantium!</p>
+                        <h4>Cтеллажи из нержавеющей стали</h4>
+                        <p>
+                            Закажите стеллажи из нержавеющей стали, которые станут стильным и практичным решением для
+                            вашего интерьера. Прочные, долговечные и изготовленные по индивидуальным параметрам, наши
+                            стеллажи идеально впишутся в любой дом.
+                        </p>
                     </div>
                 </div>
                 <div class="productsBox">
                     <div class="productsImg" style="background-image: url(img/carty2.png);"></div>
                     <div class="productsText">
-                        <h4>Name products</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id quasi repudiandae vero nisi
-                            explicabo accusantium!</p>
+                        <h4>Кресло</h4>
+                        <p>
+                            Создайте неповторимую атмосферу уюта и стиля с нашим креслом из коллекции "Steel Comfort".
+                            Идеальное сочетание минималистичного дизайна и максимального комфорта. Прочная рама из
+                            нержавеющей стали обеспечивает долговечность, а мягкая обивка добавляет роскоши
+                        </p>
                     </div>
                 </div>
                 <div class="productsBox">
                     <div class="productsImg" style="background-image: url(img/carty3.png);"></div>
                     <div class="productsText">
-                        <h4>Name products</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id quasi repudiandae vero nisi
-                            explicabo accusantium!</p>
+                        <h4>Кухенная система</h4>
+                        <p>
+                            Создайте стильный и функциональный центр вашего дома с нашей кухонной системой из коллекции
+                            "Steel Gourmet". Этот минималистичный кухонный блок из нержавеющей стали и дерева идеально
+                            сочетает в себе элегантный дизайн и практичность.
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
     </div>
-<!-- -------------------------------------------- O nas ------------------------------------------------ -->
+    <!-- -------------------------------------------- O nas ------------------------------------------------ -->
     <div class="fon1">
         <section class="part">
             <h3>Наши партнёры</h3>
@@ -288,7 +298,7 @@
             <h2><a href="tel: +998882243000">+998(88) 224-30-00</a></h2>
             <h2><a href="tel: +998973001331">+998(97) 300-13-31</a></h2>
             <a
-            href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=Ab5oB3r-rJghrWGuz03u9j6XMf7U-lSop2vs3NJ1QD2L0iydOPBZwTJqAUHCqXv94T_qJgJRqV-NQA&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-987721400%3A1723878073996051&ddm=0">decoroomgroup@gmail.com</a>
+                href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=Ab5oB3r-rJghrWGuz03u9j6XMf7U-lSop2vs3NJ1QD2L0iydOPBZwTJqAUHCqXv94T_qJgJRqV-NQA&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-987721400%3A1723878073996051&ddm=0">decoroomgroup@gmail.com</a>
             <i class="fa fa-telegram fa-lg" aria-hidden="true"></i>
             <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
             <p style="margin-top: 20px;">Адрес офиса:</p>
@@ -344,8 +354,8 @@
         }
     </script>
     <script src="script.js"></script>
-    
-   
+
+
 </body>
 
 </html>
