--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-    <!-- -------------------------------------------- Menyu ------------------------------------------------ -->
+<!-- -------------------------------------------- Preloader ------------------------------------------------ -->
+    <div class="preloader" id="pageLoader">
+        <div class="loader">
+            <h1>Decoroom steel</h1>
+        </div>
+    </div>
+<!-- -------------------------------------------- Menyu ------------------------------------------------ -->
     <nav id="nav">
         <div class="navBox">
             <div class="logo"></div>
@@ -51,9 +57,14 @@
         </div>
     </div>
     <!-- -------------------------------------------- Header ------------------------------------------------ -->
-    <header></header>
+    <header>
+        <h1>СТАЛЬ – ЭТО НЕ ПРОСТО СПЛАВ,<br>ЭТО НАШЕ ПРИЗВАНИЕ.</h1>
+        <button>Узнать цену</button>
+    </header>
+
+    <!-- -------------------------------------------- О нашей компании ------------------------------------------------ -->
     <div class="fon">
-        <h6>О нашей компании</h6>
+        <h6>О Компании</h6>
         <div class="oNas">
             <div class="social">
                 <div class="social-icon">
@@ -186,7 +197,9 @@
         <!-- -------------------------------------------- Produkti ------------------------------------------------ -->
         <section class="products">
             <h3>Наши продукты</h3>
-            <div class="images"></div>
+            <div class="images-slider">
+                <iframe src="libiray/animate/index.html" frameborder="0"></iframe>
+            </div>
             <div class="productsCont">
                 <div class="productsBox">
                     <div class="productsImg" style="background-image: url(img/carty1.png);"></div>
@@ -277,6 +290,13 @@
                 </div> -->
             </div>
         </section>
+<!-- -------------------------------------------- Otziv ------------------------------------------------ -->
+<section class="otziv">
+    <div class="otziv-box">
+        <iframe src="libiray/otziv/index.html" frameborder="0"></iframe>
+    </div>
+</section>
+<!-- -------------------------------------------- Form ------------------------------------------------ -->
         <section class="form">
             <h1>Закажите обратный звонок</h1>
             <p>В течении 10 минут, наш менеджер свяжется с Вами</p>
