--- a/libiray/Slicebox/slide3d.html
+++ b/libiray/Slicebox/slide3d.html
@@ -130,7 +130,8 @@
 							},
 							orientation : 'r',
 							cuboidsRandom : true,
-							disperseFactor : 30
+							disperseFactor : 30,
+							autoplay : true
 						} ),
 						
 						init = function() {
