--- a/libiray/slick-1.8.1/index.html
+++ b/libiray/slick-1.8.1/index.html
@@ -23,18 +23,9 @@
 
     .slider {
       width: 100%;
-      /* border: 2px solid red; */
+      border: 2px solid red;
       color: white;
     }
-
-    /* .slick-slide {
-      margin: 0px 20px;
-      } */
-
-    /* .slick-prev:before,
-      .slick-next:before {
-        color: black;
-        } */
 
     h2 {
       margin: 5px 0px;
