--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <!-- -------------------------------------------- Preloader ------------------------------------------------ -->
-    <!-- <div class="preloader" id="pageLoader">
+    <div class="preloader" id="pageLoader">
         <div class="loader">
             <h1>Decoroom steel</h1>
         </div>
-    </div> -->
+    </div>
     <!-- -------------------------------------------- Menyu ------------------------------------------------ -->
     <nav id="nav">
         <div class="navBox">
