--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="./libiray/slick-1.8.1/slick/slick.css">
-  <link rel="stylesheet" type="text/css" href="./libiray/slick-1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" type="text/css" href="./libiray/slick-1.8.1/slick/slick-theme.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <title>Decoroom steel</title>
 </head>
-
 <body>
     <!-- -------------------------------------------- Preloader ------------------------------------------------ -->
-    <div class="preloader" id="pageLoader">
+    <!-- <div class="preloader" id="pageLoader">
         <div class="loader">
             <h1>Decoroom steel</h1>
         </div>
-    </div>
+    </div> -->
     <!-- -------------------------------------------- Menyu ------------------------------------------------ -->
     <nav id="nav">
         <div class="navBox">
             <div class="logo"></div>
-            <h3>Decoroom Steel</h3>
+            <h3 class="stainless-steel-text">Decoroom Steel</h3>
         </div>
         <div class="navBox navnon">
             <ul>
@@ -46,8 +46,8 @@
             </div>    
         </div>
         <div class="navBox navnon1">
-            <button class="btn1" id="lan4">Наш магазин</button>
-            <button class="btn2" id="lan5">Обратная связь</button>
+            <button class="btn1" id="lan4"><a href="https://decoroomsteel.uz/" target="_blank">Наш магазин</a></button>
+            <button class="btn2" id="lan5"><a href="#svyaz">Обратная связь</a></button>
         </div>
         <span class="spanchik" onclick="openNav()">&#9776;</span>
     </nav>
@@ -62,7 +62,7 @@
             <h3><a href="tel: +998882243000">+998(88) 224-30-00</a></h3>
             <h3><a href="tel: +998973001331">+998(97) 300-13-31</a></h3>
             <a
-                href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=Ab5oB3r-rJghrWGuz03u9j6XMf7U-lSop2vs3NJ1QD2L0iydOPBZwTJqAUHCqXv94T_qJgJRqV-NQA&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-987721400%3A1723878073996051&ddm=0">decoroomgroup@gmail.com</a>
+                href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=Ab5oB3r-rJghrWGuz03u9j6XMf7U-lSop2vs3NJ1QD2L0iydOPBZwTJqAUHCqXv94T_qJgJRqV-NQA&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-987721400%3A1723878073996051&ddm=0">decoroomsteel01@gmail.com</a>
             <div class="leftContact2">
                 <i class="fa fa-telegram fa-lg" aria-hidden="true"></i>
                 <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
@@ -75,7 +75,7 @@
     <header>
         <h1 id="lan6">Нержавеющая сталь</h1> 
         <h2 id="lan7">Инновации, Надежность, Долговечность</h2>
-        <button id="lan8">Узнать цену</button>
+        <button id="lan8"><a href="https://decoroomsteel.uz/" target="_blank">Узнать цену</a></button>
     </header>
 
     <!-- -------------------------------------------- О нашей компании ------------------------------------------------ -->
@@ -500,14 +500,15 @@
             </div>
         </section> -->
         <!-- -------------------------------------------- Form ------------------------------------------------ -->
-        <section class="form">
+        <section class="form" id="svyaz">
             <h1 id="lan62">Закажите обратный звонок</h1>
             <p id="lan63">В течении 10 минут, наш менеджер свяжется с Вами</p>
             <div class="formBox">
-                <form action="">
-                    <input id="lan64" type="text" placeholder="*Ваше имя :">
-                    <input id="lan65" type="number" placeholder="*Телефон :">
-                    <textarea id="lan66" placeholder="Комментарии :"></textarea>
+                <form action="https://api.web3forms.com/submit" method="POST">
+                    <input type="hidden" name="access_key" value="3d81deba-4cbf-4052-8555-10536750ed25">
+                    <input id="lan64" type="text" name="name" required placeholder="*Ваше имя :">
+                    <input id="lan65" type="number" name="telefon" required placeholder="*Телефон :">
+                    <textarea id="lan66" name="message" required placeholder="Комментарии :"></textarea>
                     <button id="lan67">ОТПРАВИТЬ</button>
                 </form>
             </div>
@@ -521,14 +522,14 @@
             <h2><a href="tel: +998882243000">+998(88) 224-30-00</a></h2>
             <h2><a href="tel: +998973001331">+998(97) 300-13-31</a></h2>
             <a
-                href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=Ab5oB3r-rJghrWGuz03u9j6XMf7U-lSop2vs3NJ1QD2L0iydOPBZwTJqAUHCqXv94T_qJgJRqV-NQA&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-987721400%3A1723878073996051&ddm=0">decoroomgroup@gmail.com</a>
+                href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=Ab5oB3r-rJghrWGuz03u9j6XMf7U-lSop2vs3NJ1QD2L0iydOPBZwTJqAUHCqXv94T_qJgJRqV-NQA&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-987721400%3A1723878073996051&ddm=0">decoroomsteel01@gmail.com</a>
             <i class="fa fa-telegram fa-lg" aria-hidden="true"></i>
             <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
             <p id="lan70" style="margin-top: 20px;">Адрес офиса:</p>
             <h3 id="lan71">Узбекистан, P9XV+JV8, Buxoro, Buxoro Viloyati</h3>
         </div>
         <div class="col-2">
-            <div id="map" style="width: 100%; height: 100%"></div>
+            <div class="map" id="map"></div>
         </div>
     </footer>
     <script>
@@ -552,30 +553,6 @@
             updateCount();
         });
     </script>
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"></script>
-    <script type="text/javascript">
-        ymaps.ready(init);
-        function init() {
-            var myMap = new ymaps.Map("map", {
-                center: [39.749133, 64.394639],
-                zoom: 18
-            });
-            let placemark = new ymaps.Placemark([39.749133, 64.394639], {
-                balloonContent: `
-                    <div class='balloon'>
-                      <p>Decoroom</p>
-                        <a href="tel: +998882243000">(88)2243000</a>
-                        <p><a href="tel: +998973001331">(97)3001331</a></p>
-                    </div>
-                `
-            }, {
-
-            })
-            myMap.geoObjects.add(placemark)
-            placemark.balloon.open();
-
-        }
-    </script>
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
   <script src="./libiray/slick-1.8.1/slick/slick.js" type="text/javascript" charset="utf-8"></script>
@@ -594,7 +571,19 @@
       });
     });
   </script>
+  <script src="https://maps.api.2gis.ru/2.0/loader.js"></script>
+  <script>
+    var map;
+    DG.then(function () {
+        map = DG.map('map', {
+            center: [39.7489282877098, 64.3948090459716], // Координаты центра карты (Ташкент, например)
+            zoom: 20 // Уровень масштаба карты
+        });
+
+        // Добавление маркера
+        DG.marker([39.7489282877098, 64.3948090459716]).addTo(map).bindPopup('город Бухара X.A.G`Ijduvoniy Ko`Chasi, 2-Uy');
+    });
+</script>
 
 </body>
-
 </html>
